ai/k8s/ai-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai
  labels:
    name: ai
    purpose: jupyter-ai-workspace
